--- a/app/assets/stylesheets/rainify.css
+++ b/app/assets/stylesheets/rainify.css
@@ -1,29 +1,12 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- *= require foundation_and_overrides
-
- */
-
- body{
+body{
  	background-color: #333;
  }
 
-#background{
+body{
 	background: none;
 	background-image: url('rain.png');
 		height: 100%;
+		/*$("#background").height($(document).height())*/
 	left: 0;
 	position: absolute;
 	top: 0;
