--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,6 +18,9 @@
     <%= form_for @shop do |f| %>
       <%= f.check_box :rainify, id: "rainify_check" %>
     <% end %>
-
+  </div>
+  <div class='small-12 columns text-center more-margin'>
+    <p id="rain_status">
+    </p>
   </div>
 </div>
