--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,42 +16,36 @@
 
  */
 
- body{
- 	background-color: #333;
+ h1{
+ 	font-family: 'Open Sans', sans-serif;
+ 	font-weight: 700;
+ 	font-size: 8em;
+ 	color:#84C0CB;
  }
 
-#background{
-	background: none;
-	background-image: url('rain.png');
-		height: 100%;
-	left: 0;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	z-index:0;
-	-webkit-animation: snow 3s linear infinite;
-	-moz-animation: snow 3s linear infinite;
-	-ms-animation: snow 3s linear infinite;
-	animation: snow 3s linear infinite;
+ p{
+ 	font-family: 'Open Sans', sans-serif;
+ 	font-weight: 700;
+ 	font-size: 3em;
+ 	color:#84C0CB;
+ }
+
+input[type="checkbox"]{
+  zoom:2;
+  transform:scale(2);
+  -ms-transform:scale(2);
+  -webkit-transform:scale(2);
+  -o-transform:scale(2);
+  -moz-transform:scale(2);
+  transform-origin:0 0;
+  -ms-transform-origin:0 0;
+  -webkit-transform-origin:0 0;
+  -o-transform-origin:0 0;
+  -moz-transform-origin:0 0;
+  -webkit-transform-origin:0 0;
+  cursor: pointer;
 }
 
-@keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  /*0% {background-position: 500px 500px, 100px 200px, -100px 150px;}*/
-  100% {background-position: 0px 1000px, 0px 400px, 0px 300px;}
+.more-margin{
+	margin-top: 5em;
 }
-@-moz-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  /*0% {background-position: 500px 500px, 100px 200px, -100px 150px;}*/
-  100% {background-position: 400px 1000px, 200px 400px, 100px 300px;}
-}
-@-webkit-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  /*0% {background-position: 500px 500px, 100px 200px, -100px 150px;}*/
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}
-@-ms-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  /*0% {background-position: 500px 500px, 100px 200px, -100px 150px;}*/
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}	
