--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,13 +14,13 @@
     <h1>
       Rainify
     </h1>
+    <p><%= @shop.shopify_domain %></p>
 
     <%= form_for @shop do |f| %>
       <%= f.check_box :rainify, id: "rainify_check" %>
     <% end %>
   </div>
   <div class='small-12 columns text-center more-margin'>
-    <p id="rain_status">
-    </p>
+    <p id="rain_status"></p>
   </div>
 </div>
