--- a/public/rainify.css
+++ b/public/rainify.css
@@ -1,36 +1,30 @@
 body{
-	background-color: #333;
 	background: none;
-	background-image: url("rain.png");
-	/*height: 100%;*/
+	background-image: url('rain.png');
 	left: 0;
 	position: absolute;
 	top: 0;
 	width: 100%;
 	z-index:0;
-	-webkit-animation: snow 3s linear infinite;
-	-moz-animation: snow 3s linear infinite;
-	-ms-animation: snow 3s linear infinite;
-	animation: snow 3s linear infinite;
+	-webkit-animation: rain 3s linear infinite;
+	-moz-animation: rain 3s linear infinite;
+	-ms-animation: rain 3s linear infinite;
+	animation: rain 3s linear infinite;
 }
 
-@keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  /*0% {background-position: 500px 500px, 100px 200px, -100px 150px;}*/
-  100% {background-position: 0px 1000px, 0px 400px, 0px 300px;}
+@keyframes rain {
+  0% {background-position: 0px 0px;}
+  100% {background-position: 0px 1000px;}
 }
-@-moz-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  /*0% {background-position: 500px 500px, 100px 200px, -100px 150px;}*/
-  100% {background-position: 400px 1000px, 200px 400px, 100px 300px;}
+@-moz-keyframes rain {
+  0% {background-position: 0px 0px}
+  100% {background-position: 400px 1000px;}
 }
-@-webkit-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  /*0% {background-position: 500px 500px, 100px 200px, -100px 150px;}*/
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
+@-webkit-keyframes rain {
+  0% {background-position: 0px 0px}
+  100% {background-position: 500px 1000px;}
 }
-@-ms-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  /*0% {background-position: 500px 500px, 100px 200px, -100px 150px;}*/
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
+@-ms-keyframes rain {
+  0% {background-position: 0px 0px}
+  100% {background-position: 500px 1000px;}
 }	
