--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,16 +15,85 @@
  *= require foundation_and_overrides
 
  */
+html, body { padding: 0; margin: 0; }
 
- h1{
- 	font-family: 'Open Sans', sans-serif;
- 	font-weight: 700;
- 	font-size: 4em;
- 	color:#72AEDA;
+body {
+  font-family: "ProximaNovaLight", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #f2f7fa;
+}
+
+h1 {
+  font-weight: 300;
+  font-size: 40px;
+  margin-bottom: 10px;
+  color:#72AEDA;
+}
+
+.subhead {
+  font-size: 17px;
+  line-height: 32px;
+  font-weight: 300;
+  color: #969A9C;
+}
+
+input {
+/*  width: 3em;
+  height: 3em;*/
+  padding: 10px;
+  border: 1px solid #479CCf;
+  color: #575757;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  border-radius: 4px 0 0 4px;
+  font-size: 18px;
+  /*float: left;*/
+}
+
+button {
+  color: #ffffff;
+  background-color: #3793cb;
+  width: 100px;
+  height: 50px;
+  padding: 10px 20px 10px 20px;
+  box-sizing: border-box;
+  border: none;
+  text-shadow: 0 1px 0 #3188bc;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 0 4px 4px 0;
+  float: right;
+}
+
+button:hover {
+  background-color: #479CCf;
+}
+
+form {
+  display: block;
+}
+
+.container {
+  text-align: center;
+  margin-top: 100px;
+  padding: 20px;
+}
+
+.container__form {
+  width: 400px;
+  margin: auto;
+}
+
+ body{
+  background-color: #FEFAF9;
+ }
+
+ .rainify-image{
+  background-color: #4A4A4A;
+  width: 25%;
+  border-radius: 5px;
  }
 
  p{
- 	font-family: 'Open Sans', sans-serif;
  	font-weight: 300;
  	font-size: 2em;
  	color:#72AEDA;
@@ -47,5 +116,15 @@ input[type="checkbox"]{
 }
 
 .more-margin{
-	margin-top: 5em;
+	margin-top: 3em;
+}
+
+.blue{
+  background-color: #70ADDC;
+}
+.store-link{
+  color: rgb(125, 125, 125);
+}
+.store-link:hover{
+  color:#4A4A4A;
 }
